--- a/index.html
+++ b/index.html
@@ -2,21 +2,50 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<title>Sketch Pad!</title>
 </head>
 <body>
 	<span class="title">Sketch Pad</span>
 	<div id="canvas"></div>	
-	<div class="btn-group">
-		<button type="button" class="btn btn-primary" onclick="draw()">Draw</button>
-		<button type="button" class="btn btn-success" onclick="draw_color()">Draw Color</button>
-		<button type="button" class="btn btn-warning" onclick="erase()">Eraser</button>
-		<button type="button" class="btn btn-danger" onclick="clear_canvas()">Clear</button>
+	
+	<div class="controls">
+		<div class="btn-group">
+			<button type="button" class="btn btn-primary" onclick="draw()">Draw</button>
+			<button type="button" class="btn btn-success" onclick="draw_color()">Draw Color</button>
+			<button type="button" class="btn btn-warning" onclick="erase()">Eraser</button>
+			<button type="button" class="btn btn-danger" onclick="clear_canvas()">Clear</button>
+		</div>
+		<div class="btn-group">
+			<button type="button" class="btn btn-info" onclick="outLine()">Toggle Grid</button>
+			<button type="button" class="btn btn-info" data-toggle="modal" data-target="#grid_Modal">New Grid</button>
+		</div>
 	</div>
-	<button type="button" class="btn btn-default" onclick="outLine()">Toggle Grid</button>
 
+	<!-- MODAL -->
+	<div class="modal fade" id="grid_Modal" role="dialog">
+		<div class="modal-dialog">
+			<!-- content -->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Grid Dimensions</h4>
+				</div>
+				<div class="modal-body">
+					<p id="currentSetting"></p>
+					<div class="form-group">
+					<input type="text" class="form-control" id="new_gridSize">
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-success" onclick="recreate_canvas()" data-dismiss="modal">Submit</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script src="canvas.js"></script>
 </body>
 </html>
