--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="canvas.js"></script>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<script src="js/canvas.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<title>Sketch Pad!</title>
 </head>
 <body>
 	<span class="title">Sketch Pad</span>
 	<div id="canvas"></div>	
-	
+
 	<div class="controls">
 		<div class="btn-group">
 			<button type="button" class="btn btn-primary" onclick="draw()">Draw</button>
