--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="js/canvas.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<script src="sketchPad/js/canvas.js"></script>
+	<link rel="stylesheet" type="text/css" href="sketchPad/css/stylesheet.css">
 	<title>Sketch Pad!</title>
 </head>
 <body>
