--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="btn-group">
 			<button type="button" class="btn btn-info" onclick="outLine()">Toggle Grid</button>
-			<button type="button" class="btn btn-info" data-toggle="modal" data-target="#grid_Modal">New Grid</button>
+			<button type="button" class="btn btn-info" data-toggle="modal" data-target="#grid_Modal">Grid Size</button>
 		</div>
 	</div>
 
