changed button names

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 	<div class="controls">
 		<div class="btn-group">
-			<button type="button" class="btn btn-primary" onclick="draw()">Draw</button>
-			<button type="button" class="btn btn-success" onclick="draw_color()">Draw Color</button>
+			<button type="button" class="btn btn-primary" onclick="draw()">Pen</button>
+			<button type="button" class="btn btn-success" onclick="draw_color()">Crayon</button>
 			<button type="button" class="btn btn-warning" onclick="erase()">Eraser</button>
 			<button type="button" class="btn btn-danger" onclick="clear_canvas()">Clear</button>
 		</div>
